# Sherivf

./: .gitignore  ATLAS_2013_I1244522.cc  INSTALLATION.md  MCGRID_CMS_2015_Zee.yoda  MCgrid_CMS_2015_Zee.cc  MCgrid_CMS_2015_Zee.str  MCgrid_CMS_2015_Zee_4.str  NNPDF30_nlo_as_0118__91_2.root  README.md  calculate_correlation.py  evaluate_fnlotable.py  fnlo_pTZ_warmup.txt  fnlo_yZ_warmup.txt  ini.sh  latest_sherivf_output  latest_sherivf_output_fo20  output_for_correlation_plots  yoda_2_root.py  zpt.root
sherpa-cfg/211/ps/Process/Amegic/P2_2/: Makefile.am  configure.in
sherpa-cfg/211/ps/Process/Amegic/P2_3/: Makefile.am  configure.in
sherpa-cfg/211/ps/Process/Amegic/P2_4/: Makefile.am  configure.in
sherpa-cfg/ps/Process/Amegic/P2_3/: Makefile.in  configure  configure.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_54_32_10_0/: Makefile.in  V.C  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_54_32_10_1/: Makefile.am  Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_54_32_10_2/: Makefile.in  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_54_32_10_3/: Makefile.in  V.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_56_32_10_0/: Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_56_32_10_1/: Makefile.in  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_59_32_10_0/: Makefile.am  Makefile.in  V.C  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_60_32_10_0/: Makefile.am  Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_60_32_10_1/: Makefile.am  Makefile.in  V.C  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_60_32_10_2/: Makefile.in  V.C  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_60_32_10_3/: Makefile.in  V.C  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_60_32_10_4/: Makefile.am  Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_0/: Makefile.am  Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_1/: Makefile.am  Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_10/: Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_11/: Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_2/: Makefile.in  V.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_3/: Makefile.in  V.C  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_4/: Makefile.in  V.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_5/: Makefile.in  V.C  V.H  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_6/: Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_7/: Makefile.in  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_8/: Makefile.in  V.C  V.H  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_86_32_10_9/: Makefile.in  V.H  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_0/: Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_1/: Makefile.am  Makefile.in  V.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_2/: Makefile.in
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_3/: Makefile.am  Makefile.in  V.H  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_4/: Makefile.in  V.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_88_32_10_5/: Makefile.in  V.C  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_92_32_10_0/: Makefile.am  Makefile.in  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_92_32_10_1/: Makefile.am  Makefile.in  V.C  V.H
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_95_32_10_0/: Makefile.in  V.C  V.H  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/P2_3_4_8_96_32_10_0/: Makefile.am  Makefile.in  V_Z.C
sherpa-cfg/ps/Process/Amegic/P2_3/autom4te.cache/: output.0  output.1  traces.1
sherpa-cfg/ps/Process/Amegic/P2_3/fsrchannels3/: C3_0.C  C3_1.C  C3_2.C  Makefile.in
sherpa-cfg_ps/Process/Amegic/P2_2/: Makefile.in  configure  configure.in  configure.in.orig
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__d__db__em__ep/: V.H
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__d__db__em__ep__S0_1/: V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__d__db__em__ep__S1_0/: V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__db__d__em__ep/: V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__db__d__em__ep__S0_1/: V.H
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__db__d__em__ep__S1_0/: Makefile.am  V.H  V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__u__ub__em__ep/: V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__u__ub__em__ep__S0_1/: V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__ub__u__em__ep__S0_1/: V.C  V.H  V_Z.C
sherpa-cfg_ps/Process/Amegic/P2_2/2_2__ub__u__em__ep__S1_0/: Makefile.am  V.H
sherpa-cfg_ps/Process/Amegic/P2_2/autom4te.cache/: output.0  output.1  traces.1
sherpa-cfg_ps/Process/Amegic/P2_2/fsrchannels2/: Makefile.in
sherpa/zjet_ps/Process/Amegic/P2_4/: Makefile.am.new  Makefile.am.orig  Makefile.in  configure  configure.in  configure.in.orig
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  V_Z_1.C  V_Z_2.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S0_1/: Makefile.am  V.C  V.H  V_1.C  V_2.C  V_Z.C  V_Z_1.C  V_Z_2.C  V_Z_3.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S0_4/: Makefile.am  V.C  V.H  V_1.C  V_2.C  V_Z.C  V_Z_1.C  V_Z_2.C  V_Z_3.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S0_5/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  V_Z_1.C  V_Z_2.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S1_0/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  V_Z_1.C  V_Z_2.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S1_4/: Makefile.am  V.C  V.H  V_1.C  V_2.C  V_Z.C  V_Z_1.C  V_Z_2.C  V_Z_3.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S1_5/: Makefile.am  V.C  V.H  V_1.C  V_2.C  V_Z.C  V_Z_1.C  V_Z_2.C  V_Z_3.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S4_0/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  V_Z_1.C  V_Z_2.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S4_1/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  V_Z_1.C  V_Z_2.C
sherpa/zjet_ps/Process/Amegic/P2_4/2_4__G__G__em__ep__d__db__S4_5/: Makefile.am  V.C  V.H  V_1.C  V_Z.C  (+2 more)
(+8652 files in other folders)
