dnl Process this file with autoconf to produce a configure script.
AC_INIT(P2_2,1.0)
AM_INIT_AUTOMAKE
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(/portal/ekpcms6/home/dhaitz/qcd/sherivf/sherpa-cfg/Process/Amegic)
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_OUTPUT( \
	fsrchannels2/Makefile \
	Makefile )












