dnl Process this file with autoconf to produce a configure script.
AC_INIT(P2_3,1.0)
AM_INIT_AUTOMAKE
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(/portal/ekpcms6/home/dhaitz/qcd/sherivf/sherpa-cfg_211_ps/Process/Amegic)
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_OUTPUT( \
	P2_3_4_8_86_32_10_0/Makefile \
	fsrchannels3/Makefile \
	P2_3_4_8_86_32_10_1/Makefile \
	P2_3_4_8_86_32_10_2/Makefile \
	P2_3_4_8_86_32_10_3/Makefile \
	P2_3_4_8_88_32_10_0/Makefile \
	P2_3_4_8_88_32_10_1/Makefile \
	P2_3_4_8_86_32_10_4/Makefile \
	P2_3_4_8_86_32_10_5/Makefile \
	P2_3_4_8_86_32_10_6/Makefile \
	P2_3_4_8_86_32_10_7/Makefile \
	P2_3_4_8_88_32_10_2/Makefile \
	P2_3_4_8_88_32_10_3/Makefile \
	P2_3_4_8_95_32_10_0/Makefile \
	P2_3_4_8_59_32_10_0/Makefile \
	P2_3_4_8_92_32_10_0/Makefile \
	P2_3_4_8_60_32_10_0/Makefile \
	P2_3_4_8_96_32_10_0/Makefile \
	P2_3_4_8_60_32_10_1/Makefile \
	P2_3_4_8_60_32_10_2/Makefile \
	P2_3_4_8_86_32_10_8/Makefile \
	P2_3_4_8_56_32_10_0/Makefile \
	P2_3_4_8_86_32_10_9/Makefile \
	P2_3_4_8_54_32_10_0/Makefile \
	P2_3_4_8_92_32_10_1/Makefile \
	P2_3_4_8_60_32_10_3/Makefile \
	P2_3_4_8_60_32_10_4/Makefile \
	P2_3_4_8_86_32_10_10/Makefile \
	P2_3_4_8_56_32_10_1/Makefile \
	P2_3_4_8_86_32_10_11/Makefile \
	P2_3_4_8_54_32_10_1/Makefile \
	P2_3_4_8_88_32_10_4/Makefile \
	P2_3_4_8_54_32_10_2/Makefile \
	P2_3_4_8_88_32_10_5/Makefile \
	P2_3_4_8_54_32_10_3/Makefile \
	Makefile )


































