dnl Process this file with autoconf to produce a configure script.
AC_INIT(P2_2,1.0)
AM_INIT_AUTOMAKE
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(/portal/ekpcms6/home/dhaitz/qcd/sherivf/sherpa-cfg/ps/Process/Amegic)
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_OUTPUT( \
	P2_2_2_6_24_16_5_0/Makefile \
	fsrchannels2/Makefile \
	P2_2_2_6_22_16_5_0/Makefile \
	P2_2_2_6_24_16_5_1/Makefile \
	P2_2_2_6_22_16_5_1/Makefile \
	P2_2_2_6_24_16_5_2/Makefile \
	P2_2_2_6_24_16_5_3/Makefile \
	Makefile )






