MAKE = make 
SUBDIRS = \
	P2_3_4_8_54_32_10_3 \
	P2_3_4_8_88_32_10_5 \
	P2_3_4_8_54_32_10_2 \
	P2_3_4_8_88_32_10_4 \
	P2_3_4_8_54_32_10_1 \
	P2_3_4_8_86_32_10_11 \
	P2_3_4_8_56_32_10_1 \
	P2_3_4_8_86_32_10_10 \
	P2_3_4_8_60_32_10_4 \
	P2_3_4_8_60_32_10_3 \
	P2_3_4_8_92_32_10_1 \
	P2_3_4_8_54_32_10_0 \
	P2_3_4_8_86_32_10_9 \
	P2_3_4_8_56_32_10_0 \
	P2_3_4_8_86_32_10_8 \
	P2_3_4_8_60_32_10_2 \
	P2_3_4_8_60_32_10_1 \
	P2_3_4_8_96_32_10_0 \
	P2_3_4_8_60_32_10_0 \
	P2_3_4_8_92_32_10_0 \
	P2_3_4_8_59_32_10_0 \
	P2_3_4_8_95_32_10_0 \
	P2_3_4_8_88_32_10_3 \
	P2_3_4_8_88_32_10_2 \
	P2_3_4_8_86_32_10_7 \
	P2_3_4_8_86_32_10_6 \
	P2_3_4_8_86_32_10_5 \
	P2_3_4_8_86_32_10_4 \
	P2_3_4_8_88_32_10_1 \
	P2_3_4_8_88_32_10_0 \
	P2_3_4_8_86_32_10_3 \
	P2_3_4_8_86_32_10_2 \
	P2_3_4_8_86_32_10_1 \
	fsrchannels3 \
	P2_3_4_8_86_32_10_0


































