MAKE = make 
SUBDIRS = \
	P2_4_16_10_306_64_18_0 \
	P2_4_16_10_434_64_18_2 \
	P2_4_16_10_530_64_18_5 \
	P2_4_16_10_404_64_18_1 \
	P2_4_16_10_408_64_18_1 \
	P2_4_16_10_534_64_18_1 \
	P2_4_16_10_530_64_18_4 \
	P2_4_16_10_404_64_18_0 \
	P2_4_16_10_534_64_18_0 \
	P2_4_16_10_408_64_18_0 \
	P2_4_16_10_544_64_18_1 \
	P2_4_16_10_543_64_18_0 \
	P2_4_16_10_406_64_18_1 \
	P2_4_8_7_174_64_13_7 \
	P2_4_8_7_244_64_13_23 \
	P2_4_8_7_174_64_13_6 \
	P2_4_8_7_244_64_13_22 \
	P2_4_8_10_174_64_13_7 \
	P2_4_8_10_244_64_13_23 \
	P2_4_8_10_174_64_13_6 \
	P2_4_8_10_244_64_13_22 \
	P2_4_16_10_364_64_18_1 \
	P2_4_16_10_560_64_18_5 \
	P2_4_16_10_370_64_18_1 \
	P2_4_16_10_568_64_18_1 \
	P2_4_8_7_174_64_13_5 \
	P2_4_8_7_244_64_13_21 \
	P2_4_8_7_174_64_13_4 \
	P2_4_8_7_244_64_13_20 \
	P2_4_8_10_174_64_13_5 \
	P2_4_8_10_244_64_13_21 \
	P2_4_8_10_174_64_13_4 \
	P2_4_8_10_244_64_13_20 \
	P2_4_16_7_212_64_15_3 \
	P2_4_16_7_310_64_15_11 \
	P2_4_16_10_384_64_18_1 \
	P2_4_16_10_570_64_18_5 \
	P2_4_8_7_174_64_13_3 \
	P2_4_8_7_244_64_13_19 \
	P2_4_8_10_174_64_13_3 \
	P2_4_8_10_244_64_13_19 \
	P2_4_16_10_390_64_18_1 \
	P2_4_16_10_578_64_18_3 \
	P2_4_16_10_578_64_18_2 \
	P2_4_16_7_212_64_15_2 \
	P2_4_16_7_310_64_15_10 \
	P2_4_16_10_364_64_18_0 \
	P2_4_16_10_560_64_18_4 \
	P2_4_16_10_568_64_18_0 \
	P2_4_16_10_370_64_18_0 \
	P2_4_16_10_406_64_18_0 \
	P2_4_16_10_544_64_18_0 \
	P2_4_8_7_174_64_13_2 \
	P2_4_8_7_244_64_13_18 \
	P2_4_8_7_174_64_13_1 \
	P2_4_8_7_244_64_13_17 \
	P2_4_8_10_174_64_13_2 \
	P2_4_8_10_244_64_13_18 \
	P2_4_8_10_174_64_13_1 \
	P2_4_8_10_244_64_13_17 \
	P2_4_16_10_384_64_18_0 \
	P2_4_16_10_570_64_18_4 \
	P2_4_8_7_174_64_13_0 \
	P2_4_8_7_244_64_13_16 \
	P2_4_8_10_174_64_13_0 \
	P2_4_8_10_244_64_13_16 \
	P2_4_16_10_390_64_18_0 \
	P2_4_16_10_578_64_18_1 \
	P2_4_16_10_565_64_18_1 \
	P2_4_16_10_429_64_18_1 \
	P2_4_16_7_212_64_15_1 \
	P2_4_16_7_310_64_15_9 \
	P2_4_16_10_578_64_18_0 \
	P2_4_16_10_565_64_18_0 \
	P2_4_16_10_564_64_18_0 \
	P2_4_16_10_429_64_18_0 \
	P2_4_16_7_212_64_15_0 \
	P2_4_16_7_310_64_15_8 \
	P2_4_16_10_434_64_18_1 \
	P2_4_16_10_530_64_18_3 \
	P2_4_16_10_530_64_18_2 \
	P2_4_8_7_244_64_13_15 \
	P2_4_8_7_244_64_13_14 \
	P2_4_8_10_244_64_13_15 \
	P2_4_8_10_244_64_13_14 \
	P2_4_16_10_560_64_18_3 \
	P2_4_8_7_244_64_13_13 \
	P2_4_8_7_244_64_13_12 \
	P2_4_8_10_244_64_13_13 \
	P2_4_8_10_244_64_13_12 \
	P2_4_16_7_310_64_15_7 \
	P2_4_16_10_570_64_18_3 \
	P2_4_8_7_244_64_13_11 \
	P2_4_8_10_244_64_13_11 \
	P2_4_16_7_310_64_15_6 \
	P2_4_16_10_560_64_18_2 \
	P2_4_8_7_244_64_13_10 \
	P2_4_8_7_244_64_13_9 \
	P2_4_8_10_244_64_13_10 \
	P2_4_8_10_244_64_13_9 \
	P2_4_16_10_570_64_18_2 \
	P2_4_8_7_244_64_13_8 \
	P2_4_8_10_244_64_13_8 \
	P2_4_16_7_310_64_15_5 \
	P2_4_16_7_310_64_15_4 \
	P2_4_16_10_434_64_18_0 \
	P2_4_16_10_530_64_18_1 \
	P2_4_16_10_530_64_18_0 \
	P2_4_8_7_244_64_13_7 \
	P2_4_8_7_244_64_13_6 \
	P2_4_8_10_244_64_13_7 \
	P2_4_8_10_244_64_13_6 \
	P2_4_16_10_560_64_18_1 \
	P2_4_8_7_244_64_13_5 \
	P2_4_8_7_244_64_13_4 \
	P2_4_8_10_244_64_13_5 \
	P2_4_8_10_244_64_13_4 \
	P2_4_16_7_310_64_15_3 \
	P2_4_16_10_570_64_18_1 \
	P2_4_8_7_244_64_13_3 \
	P2_4_8_10_244_64_13_3 \
	P2_4_16_7_310_64_15_2 \
	P2_4_16_10_560_64_18_0 \
	P2_4_8_7_244_64_13_2 \
	P2_4_8_7_244_64_13_1 \
	P2_4_8_10_244_64_13_2 \
	P2_4_8_10_244_64_13_1 \
	P2_4_16_10_570_64_18_0 \
	P2_4_8_7_244_64_13_0 \
	P2_4_8_10_244_64_13_0 \
	P2_4_16_7_310_64_15_1 \
	fsrchannels4 \
	P2_4_16_7_310_64_15_0




































































































































