lib_LTLIBRARIES = libProc_2_4__G__ub__em__ep__G__ub__S0_5.la
libProc_2_4__G__ub__em__ep__G__ub__S0_5_la_SOURCES = \
	V_2.C\
	V_1.C\
	V.C\
	V_Z_3.C\
	V_Z_2.C\
	V_Z_1.C\
	V_Z.C
CURRENT_SHERPASYS ?= /usr/users/dhaitz//local/include/SHERPA-MC
INCLUDES = -I$(CURRENT_SHERPASYS)
DEFS     = 
noinst_HEADERS = V.H






