lib_LTLIBRARIES = libProc_2_4__db__d__em__ep__G__G__S1_4.la
libProc_2_4__db__d__em__ep__G__G__S1_4_la_SOURCES = \
	V_2.C\
	V_1.C\
	V.C\
	V_Z_3.C\
	V_Z_2.C\
	V_Z_1.C\
	V_Z.C
CURRENT_SHERPASYS ?= /usr/users/dhaitz//local/include/SHERPA-MC
INCLUDES = -I$(CURRENT_SHERPASYS)
DEFS     = 
noinst_HEADERS = V.H






