lib_LTLIBRARIES = libProc_fsrchannels4.la
libProc_fsrchannels4_la_SOURCES = CG.C \
	C4_34.C\
	C4_33.C\
	C4_32.C\
	C4_31.C\
	C4_30.C\
	C4_29.C\
	C4_28.C\
	C4_27.C\
	C4_26.C\
	C4_25.C\
	C4_24.C\
	C4_23.C\
	C4_22.C\
	C4_21.C\
	C4_20.C\
	C4_19.C\
	C4_18.C\
	C4_17.C\
	C4_15.C\
	C4_14.C\
	C4_13.C\
	C4_12.C\
	C4_11.C\
	C4_10.C\
	C4_9.C\
	C4_8.C\
	C4_7.C\
	C4_6.C\
	C4_5.C\
	C4_4.C\
	C4_3.C\
	C4_2.C\
	C4_1.C\
	C4_0.C
CURRENT_SHERPASYS ?= /usr/users/dhaitz//local/include/SHERPA-MC
INCLUDES = -I$(CURRENT_SHERPASYS)
DEFS     = 

































